# src/Modules/Kalm.Identity/Application/ManagementAuthentication/IPasswordHasher.cs
@@ -1,0 +1,8 @@
+namespace Kalm.Identity.Application.ManagementAuthentication;
+
+public interface IPasswordHasher
+{
+    string Hash(string password);
+
+    PasswordVerificationResult Verify(string password, string encodedHash);
+}
